# adaptive-learning-platform

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
docker/: docker-compose.yml
docs/decisions/: step-01-arhitektura-i-stek.md  step-02-poetry-python312.md  step-03-fastapi-skeleton.md  step-04-config-env.md  step-05-docker-postgres.md  step-06-alembic-init.md  step-07-initial-ddl.md  step-08-content-questions-ddl.md  step-09-diagnostika-ddl.md  step-10-level-exam-ddl.md  step-11-rank-final-ddl.md  step-12-db-infra.md  step-13-fix-email-validator.md  step-13-signup.md  step-14-fix-bcrypt.md  step-14-seed-bootstrap.md  step-15-jwt-login.md  step-16-auth-deps.md  step-17-current-stage.md  step-18-diagnostika.md  step-19-content-assign.md  step-20-minitest.md  step-21-eligibility.md  step-22-level-exam-start.md  step-23-level-exam-submit.md  step-24-level-exam-progression.md  step-25-admin-auth-approvals.md  step-26-fix-progression.md  step-26-rank-progression.md  step-27-junior2-content.md  step-28-junior3-content.md  step-29-junior3-to-middle1-approval.md
migrations/: env.py
migrations/versions/: 12fe7d06e671_step_11_rank_final_ddl.py  2eb1f5267ac2_step_13_users_password_hash.py  42c46d9f9aee_step_08_content_questions_ddl.py  52fec2dfc3d9_step_25_admin_password_hash.py  69ff3174354a_step_07_initial_core_ddl.py  6b7b0b7e1553_step_09_diagnostika_ddl.py  7d2ed93fb320_step_10_level_exam_ddl.py
scripts/seed/: step-14-bootstrap.sql  step-18-sample-questions.sql  step-19-sample-articles.sql  step-20-article-minitests.sql  step-22-extra-questions.sql  (+4 more)
(+36 files in other folders)
